--- a/Register.html
+++ b/Register.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title>Register</title>
+	<link rel = "stylesheet" href="Course.css">
 </head>
 <body>
 	<nav>
-		<a href = "index.html">Home</a><br>
+		<a href = "index.html">Home</a><br><br>
 		<a href = "First Lesson.html">First Lesson</a>
 	</nav>
 	<h1>Welcome to Sharon's English Psychometric Course!</h1>
