--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<title>Sharon's Psychometric Class</title>
+	<link rel = "stylesheet" href="Course.css">
 </head>
 
 <body>
 	<nav>
-		<a href="Register.html">Register</a><br>
+		<a href="Register.html">Register</a><br><br>
 		<a href="First Lesson.html">First Lesson</a>
 	</nav>
 	<h1>Introduction</h1>
